# shorty

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
examples/integration/: callBitlyEndpoint.py  callTinyEndpoint.py
shorty/: api.py
shorty/apis/: app.py
shorty/apis/v1/: __init__.py  shortlinks.py
shorty/config/: settings.py  utils.py
shorty/constants/: errors.py  shortlinks.py
shorty/exceptions/: custom_exceptions.py
shorty/integration/bitly/: client.py
shorty/integration/tinyurl/: client.py
shorty/utils/: handler.py  utils.py
tests/: test_shorty.py
tests/integration/: test_shorty.py
tests/unit/: test_bitly_client.py  test_handler.py  test_tiny_client.py
